2010-03-22  Leandro Pereira  <leandro@profusion.mobi>

        Reviewed by Simon Hausmann.

        Add EFL-specific code to platform/NotImplemented.h.
        http://webkit.org/b/36320

        * platform/NotImplemented.h:

2010-03-21  Kim Grönholm  <kim.gronholm@nomovok.com>

        Reviewed by Simon Hausmann.

        [Qt] GraphicsLayer: matrix interpolations in transform-animations don't behave correctly
        https://bugs.webkit.org/show_bug.cgi?id=35520
        
        The case where the list of source and target transform operations are 
        not the same but have the same size needs to be special-cased in
        GraphicsLayerQt, as well as the case where the source or target
        operation list is empty. The URLs listed here render correctly after
        applying the patch.

        Tests: https://bug-35520-attachments.webkit.org/attachment.cgi?id=49890
               https://bug-35520-attachments.webkit.org/attachment.cgi?id=49889
            

        * platform/graphics/qt/GraphicsLayerQt.cpp:
        (WebCore::TransformAnimationQt::applyFrame):

2010-03-21  Dmitry Gorbik  <socket.h@gmail.com>

        <http://webkit.org/b/14858> <col> width ignored when not tied to a single cell

        Reviewed by David Kilzer.

        Fixed width calculation for cells with span when <col> is defined.

        Test: fast/table/col-width-span-expand.html

        * rendering/RenderTableCell.cpp:
        (WebCore::RenderTableCell::styleOrColWidth): Added the calculation of cell width
        in case of <col> defined and span > 1.

2010-03-20  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.
        Patch by Antonio Gomes <tonikitoo@webkit.org>

        Spatial Navigation: Code simplification in FocusController.cpp and SpatialNavigation.cpp (part I)
        https://bugs.webkit.org/show_bug.cgi?id=36168

        Make use of isNull and document methods introduced in FocusCandidate class by patch in bug 36167.